Add PiTest mutation testing with 100% test strength